# RefCountingObject-AngelScript

./: .gitignore  Example.cpp  README.md  RefCountingObject.h  RefCountingObjectPtr.h
.github/workflows/: main.yml
Testbed/: CMakeLists.txt  conanfile.txt  main.cpp  setup  test.cpp
Testbed/cmake/: autocmake.yml  update.py
